<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="recentStatus"
            type="com.smile.aidlmusicserviceclient.model.ServiceStatus" />
        <variable
            name="constants"
            type="com.smile.aidlmusicserviceclient.Constants" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#00ffea"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#ff00ff00"
            android:textColor="#ff000000"
            android:layout_margin="0dp"
            android:padding="0dp"
            android:text="@string/title_text"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textSize="36dp"
            android:textStyle="bold|italic"/>

        <ImageButton
            android:id="@+id/image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:maxWidth="120dp"
            android:maxHeight="120dp"
            android:scaleType="fitCenter"
            android:src="@drawable/smile"
            android:layout_margin="0dp"
            android:padding="0dp"
            android:layout_below="@+id/title_text"
            android:layout_centerHorizontal="true"
            android:background="@android:color/transparent"/>

        <TextView
            android:id="@+id/company_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:padding="0dp"
            android:text="@string/company_name"
            android:textColor="#ff0000ff"
            android:textSize="30dp"
            android:layout_below="@+id/image_button"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/message_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:padding="0dp"
            android:text="@{recentStatus.messageText}"
            android:textColor="#ffffff00"
            android:background="#ff000000"
            android:textSize="24dp"
            android:layout_below="@+id/company_name"
            android:layout_alignLeft="@+id/company_name"
            android:layout_alignRight="@+id/company_name"
            android:layout_alignStart="@+id/company_name"
            android:layout_alignEnd="@+id/company_name"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/bind_service_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:layout_marginTop="2dp"
            android:padding="0dp"
            android:text="@string/bind_service_text"
            android:enabled="@{recentStatus.bindEnabled}"
            android:layout_below="@+id/message_text"
            android:layout_alignLeft="@+id/company_name"
            android:layout_alignRight="@+id/company_name"
            android:layout_alignStart="@+id/company_name"
            android:layout_alignEnd="@+id/company_name" />

        <Button
            android:id="@+id/unbind_service_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:layout_marginTop="2dp"
            android:padding="0dp"
            android:text="@string/unbind_service_text"
            android:enabled="@{recentStatus.unbindEnabled}"
            android:layout_below="@+id/bind_service_button"
            android:layout_alignLeft="@+id/company_name"
            android:layout_alignRight="@+id/company_name"
            android:layout_alignStart="@+id/company_name"
            android:layout_alignEnd="@+id/company_name" />

        <Button
            android:id="@+id/play_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:layout_marginTop="2dp"
            android:padding="0dp"
            android:text="@string/play_music_text"
            android:enabled="@{recentStatus.playResult!=constants.ErrorCode}"
            android:layout_below="@+id/unbind_service_button"
            android:layout_alignLeft="@+id/company_name"
            android:layout_alignRight="@+id/company_name"
            android:layout_alignStart="@+id/company_name"
            android:layout_alignEnd="@+id/company_name" />

        <Button
            android:id="@+id/pause_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:layout_marginTop="2dp"
            android:padding="0dp"
            android:text="@string/pause_music_text"
            android:enabled="@{recentStatus.pauseResult!=constants.ErrorCode}"
            android:layout_below="@+id/play_button"
            android:layout_alignLeft="@+id/company_name"
            android:layout_alignRight="@+id/company_name"
            android:layout_alignStart="@+id/company_name"
            android:layout_alignEnd="@+id/company_name" />

        <Button
            android:id="@+id/exit_bound_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:layout_marginTop="5dp"
            android:padding="0dp"
            android:text="@string/exit_bound_service_text"
            android:background="#ffff0000"
            android:layout_below="@+id/pause_button"
            android:layout_alignLeft="@+id/company_name"
            android:layout_alignRight="@+id/company_name"
            android:layout_alignStart="@+id/company_name"
            android:layout_alignEnd="@+id/company_name" />

        <TextView
            android:id="@+id/server_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40sp"
            android:padding="0dp"
            android:text="@{recentStatus.serverText}"
            android:textColor="#ffffff00"
            android:background="#ff000000"
            android:textSize="24dp"
            android:layout_below="@+id/exit_bound_service"
            android:layout_alignLeft="@+id/company_name"
            android:layout_alignRight="@+id/company_name"
            android:layout_alignStart="@+id/company_name"
            android:layout_alignEnd="@+id/company_name"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>
</layout>